# comfyui-colorfix-v3

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
layer1_nodes/: __init__.py  colorfix_patcher.py  colorfix_sharp_patcher.py  controlnet_apply.py  controlnet_multi_apply.py  controlnet_stack.py  flux_colorfix_patcher.py  flux_colorfix_sharp_patcher.py  flux_controlnet_apply.py  flux_controlnet_multi_apply.py
layer2_core/: __init__.py  blur.py  color_swap.py  sampler_callback.py
workflows/: FLUX_txt_2_img_colorfix.json  XL_txt_2_img_colorfix.json  XL_txt_2_img_colorfix_workflow.json
